[project]
name = "spatial-routing-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12",
    "geoalchemy2>=0.19.0",
    "geopandas>=1.1.3",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.4",
    "requests>=2.28",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
